--- a/spartan3e_skb_game/GenIO.ucf
+++ b/spartan3e_skb_game/GenIO.ucf
@@ -1,5 +1,5 @@
 # soldered 50MHz Clock.
-#NET "Clk_50MHz" LOC = "C9" | IOSTANDARD = LVTTL | PERIOD = 20.0ns HIGH 50%;
+NET "Clk_50MHz" LOC = "C9" | IOSTANDARD = LVTTL | PERIOD = 20.0ns HIGH 50%;
 
 # Ignore cross-clock domain data paths in timing analysis
 #NET "Clk50"  TNM = "TNM_Clk50";
@@ -10,9 +10,9 @@
 #
 # Push-buttons (Press = Hi)
 #
-#NET "btn_north" LOC = "V4"  | IOSTANDARD = LVTTL | PULLDOWN;
-#NET "btn_east"  LOC = "H13" | IOSTANDARD = LVTTL | PULLDOWN;
-#NET "btn_south" LOC = "K17" | IOSTANDARD = LVTTL | PULLDOWN;
+NET "start_game" LOC = "V4"  | IOSTANDARD = LVTTL | PULLDOWN;
+NET "new_game"  LOC = "H13" | IOSTANDARD = LVTTL | PULLDOWN;
+NET "reset_game" LOC = "K17" | IOSTANDARD = LVTTL | PULLDOWN;
 #NET "btn_west"  LOC = "D18" | IOSTANDARD = LVTTL | PULLDOWN;
 
 #
@@ -45,17 +45,17 @@
 #
 # PS/2 port
 #
-#NET "PS2_Data" LOC = "G13" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8;
-#NET "PS2_Clk"  LOC = "G14" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8;
+NET "PS2_Data" LOC = "G13" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8;
+NET "PS2_Clk"  LOC = "G14" | IOSTANDARD = LVCMOS33 | SLEW = SLOW | DRIVE = 8;
 
 #
 # VGA
 #
-#NET "VGA_R"  LOC = "H14" | IOSTANDARD = LVTTL | SLEW = FAST | DRIVE = 8;
-#NET "VGA_G"  LOC = "H15" | IOSTANDARD = LVTTL | SLEW = FAST | DRIVE = 8;
-#NET "VGA_B"  LOC = "G15" | IOSTANDARD = LVTTL | SLEW = FAST | DRIVE = 8;
-#NET "VGA_HS" LOC = "F15" | IOSTANDARD = LVTTL | SLEW = FAST | DRIVE = 8;
-#NET "VGA_VS" LOC = "F14" | IOSTANDARD = LVTTL | SLEW = FAST | DRIVE = 8;
+NET "VGA_R"  LOC = "H14" | IOSTANDARD = LVTTL | SLEW = FAST | DRIVE = 8;
+NET "VGA_G"  LOC = "H15" | IOSTANDARD = LVTTL | SLEW = FAST | DRIVE = 8;
+NET "VGA_B"  LOC = "G15" | IOSTANDARD = LVTTL | SLEW = FAST | DRIVE = 8;
+NET "VGA_HS" LOC = "F15" | IOSTANDARD = LVTTL | SLEW = FAST | DRIVE = 8;
+NET "VGA_VS" LOC = "F14" | IOSTANDARD = LVTTL | SLEW = FAST | DRIVE = 8;
 
 # RS-232 Serial Port: DCE
 #NET "RS232_RXD" LOC = "R7" | IOSTANDARD = LVTTL ;
